--- a/Site web/Page principale.html
+++ b/Site web/Page principale.html
@@ -4,7 +4,7 @@
 
 <head>
     <metacharset="utf-8" />
-    <title> Test 1 </title> ­
+    <title> MomoDansToutesSesEmotions </title> ­
 </head>
 
 <body>
