--- a/Français/Page principale.html
+++ b/Français/Page principale.html
@@ -4,7 +4,9 @@
 
 <head>
     <metacharset="utf-8" />
-    <title> MomoDansToutesSesEmotions </title> ­
+    <title> MomoSansDessusDessous </title> ­
+    <link rel="icon" href="Orb_Icons_016.png">
+
 </head>
 
 <body>
