--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -3,9 +3,9 @@
 
 
 <head>
-    <metacharset="utf-8" />
+    <!--metacharset="utf-8" /-->
     <title> MomoSansDessusDessous </title> ­
-    <link rel="icon" href="Orb_Icons_016.png">
+    <link rel="icon" href="Boule de noel.ico">
 
 </head>
 
