--- a/Site web/Choix de langue.html
+++ b/Site web/Choix de langue.html
@@ -6,3 +6,12 @@
     <title> Montmorency Robotique </title>
     <link rel="icon" type="image/png" href="boule rose.png" />
 </head>
+
+<body>
+    <p>
+        <a href="Français/Page principale.html">Français</a>
+        <a href="English/Home page.html">English</a>
+    </p>
+</body>
+
+</html>
