--- a/Site web/Choix de langue.html
+++ b/Site web/Choix de langue.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Montmorency Robotique </title>
-    <link rel="icon" type="image/png" href="boule rose.png" />
+    <link rel="icon" type="image/png" href="images/boule rose.png" />
 </head>
 
 <body>
