--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -5,7 +5,7 @@
 <head>
     <!--metacharset="utf-8" /-->
     <title> MomoSansDessusDessous </title> ­
-    <link rel="pingback" href="Boule de noel.ico">
+    <link rel="icon" type="image/png" href="/images/boule rose.png" />
 
 </head>
 
