--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -3,10 +3,9 @@
 
 
 <head>
-    <!--metacharset="utf-8" /-->
-    <title> MomoSansDessusDessous </title> ­
+    <meta charset="utf-8" />
+    <title> MomoSansDessusDesous </title>
     <link rel="icon" type="image/png" href="/images/boule rose.png" />
-
 </head>
 
 <body>
