contenu du headliner

--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -5,10 +5,35 @@
 <head>
     <meta charset="utf-8" />
     <title> MomoSansDessusDesous </title>
-    <link rel="icon" type="image/png" href="/images/boule rose.png" />
+    <link rel="icon" type="image/png" href="../images/boule rose.png" />
 </head>
 
 <body>
+
+    <header>
+        <div id="header contenu">
+            <h1>
+                MomoSansDessusDesous
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Page principale.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="Le jeux.html">Le jeux</a>
+                    </li>
+                    <li>
+                        <a href="Journal de bord.html">Journal de bord</a>
+                    </li>
+                    <li>
+                        <a href="Le robot.html">Le robot</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <h1> Titre1 </h1>
     <p> ceci est un sous titre de l'affaire </p>
     <p>
