--- a/Site web/Choix de langue.html
+++ b/Site web/Choix de langue.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8" />
     <title> Montmorency Robotique </title>
     <link rel="icon" type="image/png" href="images/boule rose.png" />
+    <link rel="stylesheet" media="screen" type="text/css" href="../Site web/CSS/Style choix de langue.css" />
 </head>
 
 <body>
-    <p>
+    <p class="center">
         <a href="Français/Page principale.html">Français</a>
         <a href="English/Home page.html">English</a>
     </p>
