--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -6,74 +6,108 @@
     <meta charset="utf-8" />
     <title> MomoSansDessusDesous </title>
     <link rel="icon" type="image/png" href="../images/boule rose.png" />
+    <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
 
 <body>
+    <div id="container">
+        <header>
+            <div id="header">
+                <h1>
+                    MomoSansDessusDesous
+                </h1>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="Page principale.html">Accueil</a>
+                        </li>
+                        <li>
+                            <a href="Le jeux.html">Le jeux</a>
+                        </li>
+                        <li>
+                            <a href="Journal de bord.html">Journal de bord</a>
+                        </li>
+                        <li>
+                            <a href="Le robot.html">Le robot</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
 
-    <header>
-        <div id="header contenu">
-            <h1>
-                MomoSansDessusDesous
-            </h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="Page principale.html">Accueil</a>
-                    </li>
-                    <li>
-                        <a href="Le jeux.html">Le jeux</a>
-                    </li>
-                    <li>
-                        <a href="Journal de bord.html">Journal de bord</a>
-                    </li>
-                    <li>
-                        <a href="Le robot.html">Le robot</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <h1> Titre1 </h1>
-    <p> ceci est un sous titre de l'affaire </p>
-    <p>
-        le paragraphe esn dessous de celui-ci
-    </p>
-
-    <h2> Titre2 </h2>
-    <p> ecrire un très très très long titre <br/> bref ca break la chose </p>
-    <p> si je débute un paragraphe <br/> et que j"ai envie de passer une ligne </p>
-
-    <h1> Titre 2: faire des listes </h1>
-    <!-- yolo -->
-
-    <ol>
-        <li> truc 1 </li>
-        <li> truc 2 </li>
-        <li> truc 3 </li>
-    </ol>
-    <br/>
-
-    <ul>
-        <li> truc 1 </li>
-        <li> truc 2 </li>
-        <li> truc 3 </li>
-    </ul>
-    <!-- que ce passe-t-il si j'en met pas ? -->
-
-    <dl>
-        <dt> truc 1 </dt>
-        <dd> truc 1,1 </dd>
-        <dd> on va voir si ca marche </dd>
-        <dt> truc 2 </dt>
-        <dd> truc 2,1 </dd>
-    </dl>
-
-    <p> je veux tester un lien, clique <a href="http://www.cmontmorency.qc.cq">ici</a>
-    </p>
-
-    <p> <a href="Le jeux.html">le jeux</a>
-    </p>
+    <div id="contenu">
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+    </div>
 
 </body>
 
