--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <header>
-            <div id="header">
+            <div id="header-contenu">
                 <h1>
                     MomoSansDessusDesous
                 </h1>
