--- a/Site web/English/The robot.html
+++ b/Site web/English/The robot.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> MomoSansDessusDesous - Le robot </title>
+    <title> MomoInsideOut - The robot </title>
     <link rel="icon" type="image/png" href="../images/boule rose.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
@@ -14,21 +14,21 @@
         <header>
             <div id="header-contenu">
                 <h1>
-                    Momo Sans Dessus Desous
+                    Momo Inside Out
                 </h1>
                 <nav>
                     <ul>
                         <li>
-                            <a href="Page principale.html">Accueil</a>
+                            <a href="Home page.html">Home pagel</a>
                         </li>
                         <li>
-                            <a href="Le jeux.html">Le jeux</a>
+                            <a href="The game.html">The game</a>
                         </li>
                         <li>
-                            <a href="Journal de bord.html">Journal de bord</a>
+                            <a href="Logbook.html">Logbook</a>
                         </li>
                         <li>
-                            <a href="Le robot.html">Le robot</a>
+                            <a href="The robot.html">The robot</a>
                         </li>
                     </ul>
                 </nav>
