--- a/Site web/Français/Le jeux.html
+++ b/Site web/Français/Le jeux.html
@@ -1,15 +1,114 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
-    <metacharset="utf-8" />
-    <title> Test 1 </title> ­
+    <meta charset="utf-8" />
+    <title> MomoSansDessusDesous - Le jeux </title>
+    <link rel="icon" type="image/png" href="../images/boule rose.png" />
+    <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
 
 <body>
-    <h1> Titre1 </h1>
-    <p> ceci est un sous titre de l'affaire </p>
-    <p>
-        le paragraphe esn dessous de celui-ci
-    </p>
+    <div id="container">
+        <header>
+            <div id="header-contenu">
+                <h1>
+                    Momo Sans Dessus Desous
+                </h1>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="Page principale.html">Accueil</a>
+                        </li>
+                        <li>
+                            <a href="Le jeux.html">Le jeux</a>
+                        </li>
+                        <li>
+                            <a href="Journal de bord.html">Journal de bord</a>
+                        </li>
+                        <li>
+                            <a href="Le robot.html">Le robot</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
+
+    <div id="contenu">
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+        <p>
+            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
+            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
+            montmorencyLe club de robotique du collège montmorency
+        </p>
+    </div>
+
 </body>
+
+</html>
