--- a/Site web/English/The robot.html
+++ b/Site web/English/The robot.html
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="Home page.html">Home pagel</a>
+                            <a href="Home page.html">Home page</a>
                         </li>
                         <li>
                             <a href="The game.html">The game</a>
