--- a/Site web/English/Home page.html
+++ b/Site web/English/Home page.html
@@ -19,13 +19,13 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="Home page.html">Home</a>
+                            <a href="Home page.html">Home page</a>
                         </li>
                         <li>
                             <a href="The game.html">The game</a>
                         </li>
                         <li>
-                            <a href="Logbook.html">logbook</a>
+                            <a href="Logbook.html">Logbook</a>
                         </li>
                         <li>
                             <a href="The robot.html">The robot</a>
