--- a/Site web/Choix de langue.html
+++ b/Site web/Choix de langue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" media="screen" type="text/css" href="../Site web/CSS/Style choix de langue.css" />
 </head>
 
-<body>
+<body background="https://i.pinimg.com/originals/c3/f3/fa/c3f3fab4df6c49738448c718ae3df0cd.gif?fbclid=IwAR1uzQlFp_22m72K7f8aO7SXyat4jikuw00NKitCS0AgB3hf-I02QLprxaw">
     <p>
 
         <a href="Français/Page principale.html">Français</a>
