--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> MomoSansDessusDesous </title>
+    <title> MomoSansDessusDessous </title>
     <link rel="icon" type="image/png" href="../images/boule rose.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
@@ -14,7 +14,7 @@
         <header>
             <div id="header-contenu">
                 <h1>
-                    Momo Sans Dessus Desous
+                    Momo Sans Dessus Dessous
                 </h1>
                 <nav>
                     <ul>
