--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
 
-<body>
+<body background="/images/headline coloré.png">
     <div id="container">
         <header>
             <div id="header-contenu">
@@ -109,6 +109,6 @@
         </p>
     </div>
 
-</body>
+    </bodybackground="/images/headline coloré.png">
 
 </html>
