--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
 
-<body background="/images/headline coloré.png">
+<body>
     <div id="container">
         <header>
             <div id="header-contenu">
@@ -109,6 +109,6 @@
         </p>
     </div>
 
-    </bodybackground="/images/headline coloré.png">
+</body>
 
 </html>
