pages avec deux nvx liens

--- a/Site web/English/Logbook.html
+++ b/Site web/English/Logbook.html
@@ -30,6 +30,12 @@
                         <li>
                             <a href="The robot.html">The robot</a>
                         </li>
+                        <li>
+                            <a href="Members.html">Members</a>
+                        </li>
+                        <li>
+                            <a href="Memories.html">Memories</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
