--- a/Site web/English/Memories.html
+++ b/Site web/English/Memories.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> MomoInsideOut </title>
+    <title> MomoInsideOut - Memories </title>
     <link rel="icon" type="image/png" href="../images/boule rose.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
