--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -30,6 +30,12 @@
                         <li>
                             <a href="Le robot.html">Le robot</a>
                         </li>
+                        <li>
+                            <a href="Les membres.html">Les membres</a>
+                        </li>
+                        <li>
+                            <a href="Souvenir.html">Souvenirs</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
