--- a/Site web/Français/Journal de bord.html
+++ b/Site web/Français/Journal de bord.html
@@ -34,7 +34,7 @@
                             <a href="Les membres.html">Les membres</a>
                         </li>
                         <li>
-                            <a href="Souvenir.html">Souvenirs</a>
+                            <a href="Souvenirs.html">Souvenirs</a>
                         </li>
                     </ul>
                 </nav>
