--- a/Site web/Français/Le jeux.html
+++ b/Site web/Français/Le jeux.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> MomoSansDessusDessous - Le jeux </title>
+    <title> MomoSansDessusDessous - Le jeu </title>
     <link rel="icon" type="image/png" href="../images/boule rose.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
@@ -22,7 +22,7 @@
                             <a href="Page principale.html">Accueil</a>
                         </li>
                         <li>
-                            <a href="Le jeux.html">Le jeux</a>
+                            <a href="Le jeux.html">Le jeu</a>
                         </li>
                         <li>
                             <a href="Journal de bord.html">Journal de bord</a>
