--- a/Site web/Français/Souvenirs.html
+++ b/Site web/Français/Souvenirs.html
@@ -22,7 +22,7 @@
                             <a href="Page principale.html">Accueil</a>
                         </li>
                         <li>
-                            <a href="Le jeux.html">Le jeux</a>
+                            <a href="Le jeux.html">Le jeu</a>
                         </li>
                         <li>
                             <a href="Journal de bord.html">Journal de bord</a>
