crc et competition

--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -43,76 +43,31 @@
     </div>
 
     <div id="contenu">
+        <h2>
+            Le club de robotique du collège Montmorency
+        </h2>
         <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+            Le club de robotique du collège Montmorency existe depuis 2007.
         </p>
+
+        <h2>
+            C'est quoi CRC?
+        </h2>
         <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+            CRC est un organisme à but non lucratif ayant comme objectif de rendre plus accessible les compétitions de robotiques aux jeunes du secondaire et du cégep tout en valorisant le domaine des STIM (science, technologie, ingénierie et art) ainsi que les arts
+            et les langues. La compétition de robotique CRC est une compétition annuelle qui demande aux écoles participantes de construire un robot télécommandable, de le programmer, de se préparer pour une compétition de programmation, de construire
+            un site web, de construire un kiosque et de filmer et monter une vidéo de toute pièces.
+            <br/> Cliquez <a href="http://robo-crc.ca/fr/a-propos/">ici</a> pour plus d'information.
         </p>
+
+        <h2>
+            Flip 2020
+        </h2>
         <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+            Cette année, la compétition de robotique Flip 2020 se déroulera du 13 au 15 février 2020 au <a href="https://www.google.com/maps/place/C%C3%A9gep+Vanier/@45.5144775,-73.6775208,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91840f9cb4ca1:0xce7f12be3902472b!8m2!3d45.5144775!4d-73.6753321">Cégep Vanier</a>            (821 Sainte Croix Ave, Saint-Laurent, Québec, H4L 3X9)
+
         </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
+
     </div>
 
 </body>
