--- a/Site web/English/Home page.html
+++ b/Site web/English/Home page.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title> MomoInsideOut </title>
-    <link rel="icon" type="image/png" href="../images/boule rose.png" />
+    <link rel="icon" type="image/png" href="../images/boule bleue.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
 </head>
 
