--- a/Site web/English/Memories.html
+++ b/Site web/English/Memories.html
@@ -36,6 +36,9 @@
                         <li>
                             <a href="Memories.html">Memories</a>
                         </li>
+                        <li>
+                            <a href="Puzzle.html">Puzzle</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
