--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -36,6 +36,9 @@
                         <li>
                             <a href="Souvenirs.html">Souvenirs</a>
                         </li>
+                        <li>
+                            <a href="Casse-tête.html">Casse-tête</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
