--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -36,6 +36,9 @@
                         <li>
                             <a href="Souvenirs.html">Souvenirs</a>
                         </li>
+                        <li>
+                            <a href="Casse-tête.html">Casse-tête</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -47,7 +50,8 @@
             Le club de robotique du collège Montmorency
         </h2>
         <p>
-            Le club de robotique du collège Montmorency existe depuis 2007.
+            Depuis 2007, le club de robotique accueille de nombreux élèves avec des intérêts très variés pour participer à la compétition de robotique CRC et ainsi utiliser leur intérêts pour l'art et la science pour compétitionner dans les différentes catégories.
+            Le club est situé au cégep <a href="https://www.google.com/maps/place/Coll%C3%A8ge+Montmorency/@45.5594019,-73.7206471,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc9223815890e79:0xe7408a77564697c4!8m2!3d45.5594019!4d-73.7184584"> Montmorency</a>            (475 Boulevard de l'Avenir, Laval, QC H7N 5H9).
         </p>
 
         <h2>
@@ -64,7 +68,7 @@
             Flip 2020
         </h2>
         <p>
-            Cette année, la compétition de robotique Flip 2020 se déroulera du 13 au 15 février 2020 au <a href="https://www.google.com/maps/place/C%C3%A9gep+Vanier/@45.5144775,-73.6775208,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91840f9cb4ca1:0xce7f12be3902472b!8m2!3d45.5144775!4d-73.6753321">Cégep Vanier</a>            (821 Sainte Croix Ave, Saint-Laurent, Québec, H4L 3X9)
+            Cette année, la compétition de robotique Flip 2020 se déroulera du 13 au 15 février 2020 au <a href="https://www.google.com/maps/place/C%C3%A9gep+Vanier/@45.5144775,-73.6775208,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91840f9cb4ca1:0xce7f12be3902472b!8m2!3d45.5144775!4d-73.6753321">Cégep Vanier</a>            (821 Sainte Croix Ave, Saint-Laurent, Québec, H4L 3X9).
 
         </p>
 
