--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -57,25 +57,9 @@
                 Vidéo
             </li>
         </ul>
+
         <h2>
-            Charles Bourque (Vice-capitaine)
-        </h2>
-        <ul>
-            <li>
-                Kiosque
-            </li>
-            <li>
-                Vidéo
-            </li>
-            <li>
-                Programmation
-            </li>
-            <li>
-                Robot
-            </li>
-        </ul>
-        <h2>
-            olivier Genest
+            Olivier Genest
         </h2>
         <ul>
             <li>
@@ -103,22 +87,29 @@
             </li>
         </ul>
         <h2>
+            Charles Bourque (Vice-capitaine)
+        </h2>
+        <ul>
+            <li>
+                Kiosque
+            </li>
+            <li>
+                Vidéo
+            </li>
+            <li>
+                Programmation
+            </li>
+            <li>
+                Robot
+            </li>
+        </ul>
+
+        <h2>
             Mikhaël Bianki-Massé
         </h2>
         <ul>
             <li>
                 Robot
-            </li>
-            <li>
-                Kiosque
-            </li>
-        </ul>
-        <h2>
-            Jiali Sauve
-        </h2>
-        <ul>
-            <li>
-                Vidéo
             </li>
             <li>
                 Kiosque
@@ -138,6 +129,18 @@
                 Site Web
             </li>
         </ul>
+        <h2>
+            Jiali Sauve
+        </h2>
+        <ul>
+            <li>
+                Vidéo
+            </li>
+            <li>
+                Kiosque
+            </li>
+        </ul>
+
         <h2>
             Jérémie L'Abbée
         </h2>
