mise en page quelconque

--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -46,118 +46,126 @@
     </div>
 
     <div id="contenu-membres">
-        <h2>
-            Alexandra Renaud (Capitaine)
-        </h2>
-        <ul>
-            <li>
-                Kiosque
-            </li>
-            <li>
-                Vidéo
-            </li>
-        </ul>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
 
-        <h2>
-            Olivier Genest
-        </h2>
-        <ul>
-            <li>
-                Kiosque
-            </li>
-            <li>
-                Vidéo
-            </li>
-            <li>
-                Programmation
-            </li>
-            <li>
-                Robot
-            </li>
-        </ul>
-        <h2>
-            Benjamin Brault
-        </h2>
-        <ul>
-            <li>
-                Robot
-            </li>
-            <li>
-                Site Web
-            </li>
-        </ul>
-        <h2>
-            Charles Bourque (Vice-capitaine)
-        </h2>
-        <ul>
-            <li>
-                Kiosque
-            </li>
-            <li>
-                Vidéo
-            </li>
-            <li>
-                Programmation
-            </li>
-            <li>
-                Robot
-            </li>
-        </ul>
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
 
-        <h2>
-            Mikhaël Bianki-Massé
-        </h2>
-        <ul>
-            <li>
-                Robot
-            </li>
-            <li>
-                Kiosque
-            </li>
-        </ul>
-        <h2>
-            Florence Millette
-        </h2>
-        <ul>
-            <li>
-                Vidéo
-            </li>
-            <li>
-                Robot
-            </li>
-            <li>
-                Site Web
-            </li>
-        </ul>
-        <h2>
-            Jiali Sauve
-        </h2>
-        <ul>
-            <li>
-                Vidéo
-            </li>
-            <li>
-                Kiosque
-            </li>
-        </ul>
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
 
-        <h2>
-            Jérémie L'Abbée
-        </h2>
-        <ul>
-            <li>
-                Robot
-            </li>
-        </ul>
-        <h2>
-            Joé Goupil
-        </h2>
-        <ul>
-            <li>
-                Robot
-            </li>
-        </ul>
-    </div>
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud (Capitaine)
+            </h2>
+            <p>
+
+            </p>
+        </div>
 
 </body>
 
