--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -50,7 +50,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> Karine Huot
             </h2>
             <p>
 
